# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import ordersRouter from "./orders";
 import adminRouter from "./admin";
 import socialLinksRouter from "./social-links";
 import productsRouter from "./products";
+import paymentMethodsRouter from "./payment-methods";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(ordersRouter);
 router.use(adminRouter);
 router.use(socialLinksRouter);
 router.use(productsRouter);
+router.use(paymentMethodsRouter);
 
 export default router;
